SPRING WEB FLOW (SWF) CHANGELOG
===============================
http://www.springframework.org

Changes in version 1.0.1 ()
-----------------------------------

Package org.springframework.webflow.execution.factory
* The getHolder method on ConditionalFlowExecutionListenerLoader is now private. It has a package
  private return type, so there is no use in it being protected.

Changes in version 1.0 (25.10.2006)
-----------------------------------

Package org.springframework.webflow.action
* Fixed bug in FormAction where the binder was not properly initialized in all cases (SWF-193).

Package org.springframework.webflow.definition.registry
* Added createFlowDefinitionRegistry hook method to AbstractFlowDefinitionRegistryFactoryBean.

Package org.springframework.webflow.engine
* Removed END_STATE_VIEW_FLAG_PARAMETER from TextToViewSelector. As a result, the endingViewSelector
  method of AbstractFlowBuilder was also removed.
* Removed newDefaultFlowServiceLocator method from AbstractFlowBuildingFlowRegistryFactoryBean. 
* Fixed bug in RefreshableFlowDefinitionHolder. It was not correctly reloading flows when resources
  changed.
* Added "input-attribute" and "output-attribute" convenience elements to "input-mapper" and 
  "output-mapper" elements, respectively.
* Renamed DefaultFlowAttributeMapper to ConfigurableFlowAttributeMapper for clarity and to avoid confusion.
* Restored TargetStateResolver to support dynamic transitions.

Package org.springframework.webflow.executor
* FlowExecutorImpl now updates the flow execution in the flow execution repository after a refresh,
  without generating a new key. This ensures that side effects of render actions live beyond the
  current request.
* Refactored FlowExecutorArgumentExtractor into an interface and introduced FlowExecutorArgumentExposer
  and FlowExecutorArgumentHandler. What the FlowExecutorArgumentExtractor used to be is now